[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Courneuf-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Menus/Marco_menu.png" type="Texture" id=2]
[ext_resource path="res://UI/Menus/YesHovered.png" type="Texture" id=3]
[ext_resource path="res://UI/Menus/Yes.png" type="Texture" id=4]
[ext_resource path="res://UI/Menus/NormalONoHit.gd" type="Script" id=5]
[ext_resource path="res://Sonidos/Menu/Elegir_Menu.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "YesNoHitMode"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/YesNoHit:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 190, 207 ), Vector2( 180, 197 ), Vector2( 190, 207 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/YesNoHit:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "YesNormalMode"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/YesNormalMode:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/YesNormalMode:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 190, 93 ), Vector2( 180, 83 ), Vector2( 190, 93 ) ]
}

[node name="NormalONoHit" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.94902, 0.937255, 0.862745, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 512, 312 )
scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 305.0
margin_top = 185.0
margin_right = 718.0
margin_bottom = 440.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 413.0
margin_bottom = 255.0
alignment = 1

[node name="NormalMode" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 413.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Normal Mode[/center]"
text = "Normal Mode"
scroll_active = false

[node name="DescriptionNormalMode" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 413.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.00392157, 0, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center](Play the game as intended)"
text = "(Play the game as intended)"
scroll_active = false

[node name="YesNormalMode" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_left = 190.0
margin_top = 93.0
margin_right = 222.0
margin_bottom = 125.0
grow_horizontal = 0
focus_neighbour_top = NodePath("../YesNoHit")
focus_neighbour_bottom = NodePath("../YesNoHit")
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="NoHitMode" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 413.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]No Hit Mode[/center]"
text = "No Hit Mode"
scroll_active = false

[node name="DescriptionNormalMode2" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 413.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center](One live. You lose, you go home)"
text = "(One live. You lose, you go home)"
scroll_active = false

[node name="YesNoHit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_left = 190.0
margin_top = 207.0
margin_right = 222.0
margin_bottom = 239.0
focus_neighbour_top = NodePath("../YesNormalMode")
focus_neighbour_bottom = NodePath("../YesNormalMode")
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 3, 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sonido"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/YesNoHitMode = SubResource( 4 )
anims/YesNormalMode = SubResource( 5 )
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/YesNormalMode" to="." method="_on_YesNormalMode_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/YesNormalMode" to="." method="_on_YesNormalMode_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/YesNormalMode" to="." method="_on_YesNormalMode_pressed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/YesNoHit" to="." method="_on_YesNoHit_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/YesNoHit" to="." method="_on_YesNoHit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/YesNoHit" to="." method="_on_YesNoHit_pressed"]
